k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app.openshift.io/vcs-ref: 9bc300f48baedfb9c92b897a009c7c3cc01bbdeb
    app.openshift.io/vcs-uri: https://github.com/cloud-native-garage-method-cohort/distroless-express
  labels:
    app: distroless-app
    app.kubernetes.io/instance: distroless-app-instance
    app.kubernetes.io/name: distroless-app
    app.openshift.io/runtime: js
  name: distroless-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: distroless-app-instance
      app.kubernetes.io/name: distroless-app
  template:
    metadata:
      #creationTimestamp:  null
      labels:
        app.kubernetes.io/instance: distroless-app-instance
        app.kubernetes.io/name: distroless-app
    spec:
      containers:
        - env:
            - name: INGRESS_HOST
            - name: PROTOCOLS
            - name: LOG_LEVEL
              value: debug
          image: quay.io/alex_best_ibm/the-best-group-4-project
          imagePullPolicy: IfNotPresent
          # livenessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /
          #     port: 3000
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          # name: distroless-app
          # ports:
          #   - containerPort: 3000
          #     name: http
          #     protocol: TCP
          # readinessProbe:
          #   failureThreshold: 3
          #   httpGet:
          #     path: /
          #     port: http
          #     scheme: HTTP
          #   periodSeconds: 10
          #   successThreshold: 1
          #   timeoutSeconds: 1
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
